force-app/main/default/objects/Opportunity/fields/Closed_lost_reason_options_3__c.field-meta.xml
<CustomField>
    <fullName>Closed_lost_reason_options_3__c</fullName>
    <label>Closed lost reason - options #3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Lost_Reason_3__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Countries</fullName>
            </value>
            <value>
                <fullName>Audience/ Demographics</fullName>
            </value>
            <value>
                <fullName>Folder Analysis</fullName>
            </value>
            <value>
                <fullName>Conversion Analysis</fullName>
            </value>
            <value>
                <fullName>Mobile actual #s</fullName>
            </value>
            <value>
                <fullName>Mobile iOS data</fullName>
            </value>
            <value>
                <fullName>SimilarWeb data</fullName>
            </value>
            <value>
                <fullName>Other analytics tool</fullName>
            </value>
            <value>
                <fullName>Transferred to another rep/division</fullName>
            </value>
            <value>
                <fullName>Duplicate opportunity</fullName>
            </value>
            <value>
                <fullName>Part of another opp / agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Additional Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>