force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason_Options__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason_Options__c</fullName>
    <label>Closed lost reason - options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Insufficient budget</fullName>
            </value>
            <value>
                <fullName>No decision making authority</fullName>
            </value>
            <value>
                <fullName>Lack of need</fullName>
            </value>
            <value>
                <fullName>Poor timing</fullName>
            </value>
            <value>
                <fullName>Insufficient customer or prospect onboarding / training / education</fullName>
            </value>
            <value>
                <fullName>New CSM or AE account owner</fullName>
            </value>
            <value>
                <fullName>Unresponsive / lost stakeholder</fullName>
            </value>
            <value>
                <fullName>Company reorg / merger / acquisition</fullName>
            </value>
            <value>
                <fullName>No one to use the platform</fullName>
            </value>
            <value>
                <fullName>Legal issues</fullName>
            </value>
            <value>
                <fullName>Payment terms / annual commitment</fullName>
            </value>
            <value>
                <fullName>Missing feature / data / granularity</fullName>
            </value>
            <value>
                <fullName>Data accuracy</fullName>
            </value>
            <value>
                <fullName>Poor product fit for use case</fullName>
            </value>
            <value>
                <fullName>Poor SW package fit for use case</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Existing relationship / integration</fullName>
            </value>
            <value>
                <fullName>Agency replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>