force-app/main/default/objects/Opportunity/fields/Closed_Won_Reason_2__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reason_2__c</fullName>
    <label>Closed Won Reason #2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Won_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Value: Customer experience / service</fullName>
            </value>
            <value>
                <fullName>Value: Multiple use cases (one-stop-shop)</fullName>
            </value>
            <value>
                <fullName>Value: Incentive (discount, users, packages, features)</fullName>
            </value>
            <value>
                <fullName>Value: Migrated to Solutions</fullName>
            </value>
            <value>
                <fullName>Product: Feature / data / granularity</fullName>
            </value>
            <value>
                <fullName>Product: Accuracy</fullName>
            </value>
            <value>
                <fullName>Product: UI/UX</fullName>
            </value>
            <value>
                <fullName>Product: API / Excel</fullName>
            </value>
            <value>
                <fullName>Competition: Price</fullName>
            </value>
            <value>
                <fullName>Competition: Feature / data / granularity</fullName>
            </value>
            <value>
                <fullName>Competition: Accuracy</fullName>
            </value>
            <value>
                <fullName>Competition: Customer experience / service</fullName>
            </value>
            <value>
                <fullName>Competition: UI/UX</fullName>
            </value>
            <value>
                <fullName>Competition: Multiple use cases (one-stop-shop)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>