force-app/main/default/objects/Opportunity/fields/Closed_Won_Reason_3__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reason_3__c</fullName>
    <label>Closed Won Reason #3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Won_Reason_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Data Accuracy</fullName>
            </value>
            <value>
                <fullName>Data Granularity</fullName>
            </value>
            <value>
                <fullName>Customer Service/Experience</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>