force-app/main/default/objects/Opportunity/fields/Closed_Won_Reason_More_Details_2__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reason_More_Details_2__c</fullName>
    <label>Closed Won Reason - More Details #2</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>