force-app/main/default/objects/Opportunity/fields/Closed_Won_Reason_Options_2__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reason_Options_2__c</fullName>
    <label>Closed Won Reason - Options #2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Won_Reason_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>UI/UX</fullName>
            </value>
            <value>
                <fullName>API / Excel</fullName>
            </value>
            <value>
                <fullName>Customer experience / service</fullName>
            </value>
            <value>
                <fullName>Multiple use cases (one-stop-shop)</fullName>
            </value>
            <value>
                <fullName>Incentive (discount, users, packages, features)</fullName>
            </value>
            <value>
                <fullName>Feature / data / granularity</fullName>
            </value>
            <value>
                <fullName>Accuracy</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Migrated to Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>