force-app/main/default/objects/Opportunity/fields/Closed_Won_Reason_Options_3__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reason_Options_3__c</fullName>
    <label>Closed Won Reason - Options #3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Won_Reason_3__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Custom Dashboards</fullName>
            </value>
            <value>
                <fullName>Unique Visitors</fullName>
            </value>
            <value>
                <fullName>MW Traffic Sources</fullName>
            </value>
            <value>
                <fullName>Popular Pages</fullName>
            </value>
            <value>
                <fullName>Industry Analysis/Custom Categories</fullName>
            </value>
            <value>
                <fullName>Keyword Analysis</fullName>
            </value>
            <value>
                <fullName>App Engagement</fullName>
            </value>
            <value>
                <fullName>UI/UX</fullName>
            </value>
            <value>
                <fullName>Folder Analysis</fullName>
            </value>
            <value>
                <fullName>Conversion Analysis</fullName>
            </value>
            <value>
                <fullName>Countries</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Additional Users</fullName>
            </value>
            <value>
                <fullName>Migrated to Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>