force-app/main/default/objects/Opportunity/fields/Collections_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Collections_to_Date__c</fullName>
    <label>Collections to Date ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>