force-app/main/default/objects/Opportunity/fields/Company_Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Company_Linkedin__c</fullName>
    <formula>Account.LinkedIn_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Linkedin</label>
    <type>Text</type>
</CustomField>