force-app/main/default/objects/Opportunity/fields/Competition_Text__c.field-meta.xml
<CustomField>
    <fullName>Competition_Text__c</fullName>
    <description>MIS-2043</description>
    <inlineHelpText>Are there any people, vendors, or initiatives competing for the same funds or resources?</inlineHelpText>
    <label>Competition</label>
    <type>TextArea</type>
</CustomField>