force-app/main/default/objects/Opportunity/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <label>Competitor Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Competition__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adbeat</fullName>
            </value>
            <value>
                <fullName>AdClarity</fullName>
            </value>
            <value>
                <fullName>Adthena</fullName>
            </value>
            <value>
                <fullName>Ahrefs</fullName>
            </value>
            <value>
                <fullName>Alexa</fullName>
            </value>
            <value>
                <fullName>Apollo.io</fullName>
            </value>
            <value>
                <fullName>AppAnnie</fullName>
            </value>
            <value>
                <fullName>Apptopia</fullName>
            </value>
            <value>
                <fullName>Brightedge</fullName>
            </value>
            <value>
                <fullName>Builtwith</fullName>
            </value>
            <value>
                <fullName>Capital IQ</fullName>
            </value>
            <value>
                <fullName>Charm.io</fullName>
            </value>
            <value>
                <fullName>Clavis</fullName>
            </value>
            <value>
                <fullName>Clearbit</fullName>
            </value>
            <value>
                <fullName>Cognism</fullName>
            </value>
            <value>
                <fullName>Comscore</fullName>
            </value>
            <value>
                <fullName>Conductor</fullName>
            </value>
            <value>
                <fullName>Crunchbase</fullName>
            </value>
            <value>
                <fullName>DataHawks</fullName>
            </value>
            <value>
                <fullName>Datafox</fullName>
            </value>
            <value>
                <fullName>Values Dockpit</fullName>
                <label>Dockpit (Values)</label>
            </value>
            <value>
                <fullName>Earnest Research</fullName>
            </value>
            <value>
                <fullName>Edge by Ascential</fullName>
            </value>
            <value>
                <fullName>EtailInsights</fullName>
            </value>
            <value>
                <fullName>Junglescout</fullName>
            </value>
            <value>
                <fullName>Insideview</fullName>
            </value>
            <value>
                <fullName>Lusha</fullName>
            </value>
            <value>
                <fullName>MarketBeyond</fullName>
            </value>
            <value>
                <fullName>Mixdata</fullName>
            </value>
            <value>
                <fullName>Moat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>