force-app/main/default/objects/Opportunity/fields/Consumption_Source__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Source__c</fullName>
    <label>Data Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTPFS</fullName>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>