force-app/main/default/objects/Opportunity/fields/Count_Invoice_Created__c.field-meta.xml
<CustomField>
    <fullName>Count_Invoice_Created__c</fullName>
    <label># Invoice Created</label>
    <summaryFilterItems>
        <field>Invoice_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Invoice Created</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Request__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>