force-app/main/default/objects/Opportunity/fields/Count_Tracking_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_Tracking_Products__c</fullName>
    <label>Count Tracking Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Tracking__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>