force-app/main/default/objects/Opportunity/fields/Country_Filter__c.field-meta.xml
<CustomField>
    <fullName>Country_Filter__c</fullName>
    <label>Country Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>