force-app/main/default/objects/Opportunity/fields/Country_that_had_issues__c.field-meta.xml
<CustomField>
    <fullName>Country_that_had_issues__c</fullName>
    <label>The country that had issues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>