force-app/main/default/objects/Opportunity/fields/CreatedDateOnly__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateOnly__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedDateOnly</label>
    <type>Date</type>
</CustomField>