force-app/main/default/objects/Opportunity/fields/Cross_Sell__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if there is already an Account with the same Company Domain that the ARR is &gt;0. Meaning this Opp is considered a Cross-Sell. MIS-1273</description>
    <label>Cross-Sell</label>
    <type>Checkbox</type>
</CustomField>