force-app/main/default/objects/Opportunity/fields/CS_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>CS_Next_Steps__c</fullName>
    <description>MIS-5145</description>
    <label>CS Next Steps</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>