force-app/main/default/objects/Opportunity/fields/CSA_Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>CSA_Satisfaction_Score__c</fullName>
    <description>MIS - 1337. Used in Closed Won/Lost processes (Flows). The rep that closes the Opp will add a satisfaction score on the related CS. 
*Current values (Green/Yellow/Red) are temp. Will finalise with Lola.
*Dec 9 2021 - Removed the default value from &quot;N/A&quot; and ran a data fix to remove the value from all Opps (971 records).</description>
    <label>CS/SE Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Added Incremental Value</fullName>
            </value>
            <value>
                <fullName>Did not add incremental value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>