force-app/main/default/objects/Opportunity/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
                <isActive>false</isActive>
                <label>CAD</label>
            </value>
            <value>
                <fullName>ILS</fullName>
                <isActive>false</isActive>
                <label>ILS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>