force-app/main/default/objects/Opportunity/fields/Cycle_Price_Local__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Price_Local__c</fullName>
    <description>Cycle price in the local currency of the client</description>
    <inlineHelpText>Cycle price in the local currency of the client</inlineHelpText>
    <label>Cycle Price (Local)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>