force-app/main/default/objects/Opportunity/fields/Data_ai_App_Annie__c.field-meta.xml
<CustomField>
    <fullName>Data_ai_App_Annie__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-2073</description>
    <label>App Intelligence (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>