force-app/main/default/objects/Opportunity/fields/Data_ai_Overlap_reminder__c.field-meta.xml
<CustomField>
    <fullName>Data_ai_Overlap_reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>After we send an Email reminder for Data.ai Overlap on 50% or higher Opps, we mark this CB to make sure we will not send additional Emails - MIS 2176</description>
    <label>Data.ai Overlap reminder (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>