force-app/main/default/objects/Opportunity/fields/Data_Feeds__c.field-meta.xml
<CustomField>
    <fullName>Data_Feeds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data Feeds - MIS 2073</description>
    <label>Data Feeds</label>
    <type>Checkbox</type>
</CustomField>