force-app/main/default/objects/Opportunity/fields/Data_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Data_Subscription__c</fullName>
    <label>Data Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Source (FTP)</fullName>
            </value>
            <value>
                <fullName>By Domain</fullName>
            </value>
            <value>
                <fullName>By County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>