force-app/main/default/objects/Opportunity/fields/Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deal_Amount__c</fullName>
    <formula>IF(TEXT(Cycle__c) = &apos;One-Time&apos;, Cycle_Price__c, ARR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Amount ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>